# auto_patrol_car

./: .gitignore  LICENSE  README.md  USER_MANUAL.md
.github/workflows/: ci.yml
docs/: 01_architecture.md  02_hardware_wiring.md  03_closed_loop_theory.md  04_slam_navigation.md  05_web_control.md  06_build_run.md  07_diagrams.md  08_validation.md  FAQ.md  architecture_diagrams.md
src/raspi_car_base/: package.xml  setup.cfg  setup.py
src/raspi_car_base/config/: l298n.yaml
src/raspi_car_base/launch/: l298n_base.launch.py
src/raspi_car_base/raspi_car_base/: control_core.py  encoder_node.py  l298n_motor_node.py  wheel_odometry_node.py
src/raspi_car_bringup/: package.xml  setup.cfg  setup.py
src/raspi_car_bringup/config/: ekf.yaml  nav2_car01.yaml  patrol_waypoints.yaml  rplidar_a1.yaml  slam_toolbox_mapping.yaml
src/raspi_car_bringup/launch/: base_with_mux.launch.py  mapping.launch.py  nav2.launch.py  patrol.launch.py  record_waypoints.launch.py  rplidar_a1.launch.py
src/raspi_car_bringup/maps/: room1.pgm  room1.yaml
src/raspi_car_bringup/raspi_car_bringup/: cmd_vel_mux_node.py  patrol_node.py  route_core.py  safety_core.py  turn_assist_node.py  wall_follower_node.py  waypoint_recorder_node.py
src/raspi_car_sensors/: package.xml  setup.cfg  setup.py
src/raspi_car_sensors/config/: yb_mra02_uart.yaml
src/raspi_car_sensors/launch/: yb_mra02_uart.launch.py
src/raspi_car_sensors/raspi_car_sensors/: yb_mra02_uart_node.py
src/raspi_car_web/: package.xml  setup.cfg  setup.py
src/raspi_car_web/launch/: web_control.launch.py
src/raspi_car_web/raspi_car_web/: backend_ros2.py
src/raspi_car_web/web/: app.js  index.html
tests/: test_core.py
tools/: simulate_subsystems.py  summarize_patrol_metrics.py
