<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>raspi_car_bringup</name>
  <version>0.2.0</version>
  <description>Bringup: EKF fusion, SLAM, Nav2, patrol and mux for the encoder car</description>
  <maintainer email="ykctj@example.com">ykctj</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>raspi_car_base</exec_depend>
  <exec_depend>raspi_car_sensors</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
