<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>raspi_car_sensors</name>
  <version>0.2.0</version>
  <description>Sensor drivers (YB_MRA02 IMU) for the Raspberry Pi ROS2 car</description>
  <maintainer email="ykctj@example.com">ykctj</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
