<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>raspi_car_web</name>
  <version>0.2.0</version>
  <description>Flask ROS2 web bridge and dashboard for the encoder car</description>
  <maintainer email="ykctj@example.com">ykctj</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-flask</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
